--- a/css/style.css
+++ b/css/style.css
@@ -1,136 +1,154 @@
 body {
   font-family: arial, sans-serif;
-}
-
-.logo {
-  margin:  4rem auto 0 auto;
-  text-align: center;
-}
-
-.search {
-  text-align: center;
-}
-
-input {
-  font-size: 2em;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-li {
-  float: left;
-}
-
-a {
-  display: inline-block;
-  padding: 15px;
-  text-decoration: none;
-  line-height:24px;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-.apps {
-  -webkit-user-select: none;
-  background-image: url("https://ssl.gstatic.com/gb/images/i1_1967ca6a.png");
-  background-position: -132px -38px;
-  background-size: 528px 68px;
-  border-bottom-left-radius: 2px;
-  border-bottom-right-radius: 2px;
-  border-top-left-radius: 2px;
-  border-top-right-radius: 2px;
-  box-sizing: border-box;
-  color: rgb(0, 0, 0);
-  cursor: pointer;
-  display: inline-block;
-  font-family: arial, sans-serif;
   font-size: 13px;
-  height: 30px;
-  line-height: normal;
-  opacity: 0.550000011920929;
-  outline-color: rgb(0, 0, 0);
-  outline-style: none;
-  outline-width: 0;
-  margin-top:10px;
-  text-align: left;
-  text-decoration: none;
+}
+
+/* Header */
+header {
+  width: 100%;
+  line-height: 40px;
+}
+
+.top-navbar {
+  display: flex;
+  justify-content: space-between;
+  margin: 5px;
+  padding-top: 10px;
+  padding-right: 20px;
+  -ms-align-items: center;
+  align-items: center;
+}
+
+.top-navbar a {
+  margin: 0 10px;
+}
+
+a img {
   vertical-align: middle;
-  white-space: nowrap;
-  width: 30px;
 }
 
 .user {
-  -webkit-background-size: 32px 32px;
-  -webkit-user-select: none;
-  background-size: 32px 32px;
-  border-bottom-color: rgb(0, 0, 0);
-  border-bottom-left-radius: 50%;
-  border-bottom-right-radius: 50%;
-  border-bottom-style: none;
-  border-bottom-width: 0;
-  border-image-outset: 0;
-  border-image-repeat: stretch;
-  border-image-slice: 100%;
-  border-image-source: none;
-  border-image-width: 1;
-  border-left-color: rgb(0, 0, 0);
-  border-left-style: none;
-  border-left-width: 0;
-  border-right-color: rgb(0, 0, 0);
-  border-right-style: none;
-  border-right-width: 0;
-  border-top-color: rgb(0, 0, 0);
-  border-top-left-radius: 50%;
-  border-top-right-radius: 50%;
-  border-top-style: none;
-  border-top-width: 0;
-  color: rgb(0, 0, 0);
-  cursor: pointer;
-  display: block;
-  font-family: arial, sans-serif;
-  font-size: 13px;
-  height: 32px;
-  line-height: normal;
-  margin-bottom: -1px;
-  margin-left: -1px;
-  margin-right: -1px;
-  margin-top: -1px;
-  position: relative;
-  text-align: left;
-  white-space: nowrap;
-  width: 32px;
-  z-index: 0;
+  border-radius: 25px;
 }
 
-button {
-  background-image: -webkit-gradient(linear,left top,left bottom,from(#f5f5f5),to(#f1f1f1));
-  background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
-  background-color: #f2f2f2;
-  border: 1px solid #f2f2f2;
+.user:hover {
+  -webkit-box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
+  box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
+  border: 2px solid black;
+}
+
+#grid-icon {
+  height: 25px;
+  width: 25px;
+  opacity: .5;
+}
+
+#grid-icon:hover {
+  opacity: 1;
+}
+
+/* Main body */
+
+.logo {
+  padding-top: 130px;
+  display: block;
+  margin: 0 auto;
+  width: auto;
+  height: auto;
+  text-align: center;
+}
+
+#searchbox {
+  display: block;
+  margin: 15px auto 20px auto;
+  width: 582px;
+  height: 44px;
+  border-radius: 24px;
+  font-size: 18px;
+  padding-left: 40px;
+  border: 1px solid #dfe1e5;
+  background-image: url('https://cdn1.iconfinder.com/data/icons/hawcons/32/698956-icon-111-search-512.png');
+  background-repeat: no-repeat;
+  -webkit-background-size: 20px 20px;
+  background-size: 20px 20px;
+  background-position: left;
+  -ms-background-position-x: 12px;
+  background-position-x: 12px;
+}
+
+.search-text input:hover, .search-text input:focus {
+  -webkit-box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
+  box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
+  border-color: rgba(223, 225, 229, 0);
+  outline: none;
+}
+
+.submit-buttons {
+  text-align: center;
+}
+
+.submit-buttons input {
   border-radius: 4px;
-  color: #5F6368;
-  cursor: pointer;
-  font-family: arial,sans-serif;
+  color: rgb(95, 99, 104);
+  font-family: arial, sans-serif;
   font-size: 14px;
-  height: 36px;
-  line-height: 27px;
   margin: 11px 4px;
-  min-width: 54px;
   padding: 0 16px;
+  line-height: 27px;
+  height: 36px;
   text-align: center;
   cursor: pointer;
+  border: 1px solid #f2f2f2;
+  background-color: rgb(242, 242, 242);
 }
 
-button:hover {
-  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-  background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
-  background-color: #f8f8f8;
-  border: 1px solid #c6c6c6;
-  color: #222;
+.submit-buttons input:hover {
+  border: 1px solid rgb(198, 198, 198);
+  color: rgb(34, 34, 34);
+}
+
+/* Footer */
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #f2f2f2;
+  border: 1px solid lightgray;
+  line-height: 40px;
+}
+
+.country {
+  text-decoration: none;
+  color: rgba(0, 0, 0, .54);
+  padding-left: 27px;
+  border-bottom: 1px solid #e4e4e4;
+  font-size: 14px;
+  margin: 0;
+}
+
+.footer-top {
+  border-bottom: 1px solid #e4e4e4;
+}
+
+.bottom-navbar {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 27px;
+  padding-right: 27px;
+  margin-right: -17px;
+}
+
+nav a {
+  margin-right: 15px;
+  text-decoration: none;
+  color: rgba(0, 0, 0, .60);
+  font-size: 14px;
+  -ms-align-self: auto;
+  align-self: auto;
+  vertical-align: middle;
+}
+
+nav a:hover {
+  text-decoration: underline;
 }
